--- a/css/style.css
+++ b/css/style.css
@@ -1427,3 +1427,11 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+  
+.box {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+.box::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+}
